# Build_challenge

Asg1-producer-consumer-challenge/: README.md
Asg1-producer-consumer-challenge/scripts/: run.sh  test.sh
Asg1-producer-consumer-challenge/src/: blocking_queue.py  consumer.py  main.py  producer.py
Asg1-producer-consumer-challenge/tests/: test_blocking_queue.py  test_concurrency.py
Asg2-streamsight/: .env.example  .gitignore  README.md  pyproject.toml
Asg2-streamsight/cli/: __init__.py  convert_excel_to_csv.py  run_all.py  run_rfm_whales.py  run_streaming_analytics.py
Asg2-streamsight/results/errors/: bad_rows.jsonl
Asg2-streamsight/results/reports/: SUMMARY.md
Asg2-streamsight/results/tables/: anomalies.json  data_quality.json  geography.json  products.json  returns.json  revenue.json  rfm_whales.json
Asg2-streamsight/scripts/: convert_excel.sh  run.sh  run_analytics.sh  run_rfm.sh  setup.sh  test.sh
Asg2-streamsight/src/streamsight/: __init__.py  config.py  logging_conf.py
Asg2-streamsight/src/streamsight/analytics/: __init__.py  anomaly.py  data_quality.py  geography.py  products.py  returns.py  revenue.py
Asg2-streamsight/src/streamsight/core/: __init__.py  money.py  stream_utils.py  types.py
Asg2-streamsight/src/streamsight/io/: __init__.py  csv_stream.py  schema.py
Asg2-streamsight/src/streamsight/pipeline/: __init__.py  registry.py  runner.py
Asg2-streamsight/src/streamsight/rfm/: __init__.py  calculator.py  segmentation.py
Asg2-streamsight/src/streamsight/viz/: __init__.py  plots.py  reporting.py
Asg2-streamsight/tests/: __init__.py  conftest.py  test_analytics.py  test_core.py  test_integration.py  test_io.py  test_rfm.py
